--- a/styles.css
+++ b/styles.css
@@ -155,3 +155,57 @@ section {
   box-sizing: border-box;
   min-height: fit-content;
 }
+
+/* profile section*/
+#profile {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  height: 80vh;
+}
+.section__text {
+  align-self: top;
+}
+.section__text p {
+  font-weight: 600;
+  margin-bottom: 2rem;
+}
+
+.section__text__p2 {
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+
+.title {
+  font-size: 3rem;
+  margin-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+.section__pic-container {
+  margin-bottom: 2rem;
+  display: flex;
+  height: 400px;
+  width: 400px;
+}
+
+.profile-social-media {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 25rem;
+}
+.profile-social-media img {
+  width: 2rem;
+  cursor: pointer;
+}
+.experiance-text-container {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+}
+.text-experiance h1 {
+  float: left;
+}
