--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,6 @@ a:hover {
 
 section {
   padding-top: 4vh;
-  height: 96vh;
   margin: 0 10rem;
   box-sizing: border-box;
   min-height: fit-content;
@@ -175,7 +174,7 @@ section {
 .section__text {
   align-self: top;
 }
-.section__text p {
+.section__text__p1 {
   font-weight: 600;
   margin-bottom: 2rem;
 }
@@ -221,3 +220,293 @@ section {
 }
 
 /* About section */
+
+#about {
+  position: relative;
+}
+.about__header-title {
+  text-align: center;
+  padding-bottom: 2rem;
+  font-size: 3rem;
+}
+.section__container-text {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  flex-wrap: wrap;
+}
+.about-description {
+  width: 50%;
+  padding-top: 2rem;
+}
+.section__about-container {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.5rem;
+}
+.section__about-projects {
+  height: fit-content;
+  width: 100%;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 1rem 0.5rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.about-title {
+  font-size: 1.5rem;
+  color: #000;
+}
+.about-link {
+  color: #007acc;
+  text-decoration: underline;
+  font-size: 0.9rem;
+}
+.about-link:hover {
+  text-underline-offset: 0;
+}
+
+/* Experience */
+#experience {
+  position: relative;
+}
+.about-containers,
+.about-details-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.experience-sub-title {
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+}
+
+.experience-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2.5rem;
+  justify-content: space-around;
+}
+
+article {
+  display: flex;
+  width: 10rem;
+  justify-content: space-around;
+  gap: 0.5rem;
+}
+
+article .icon {
+  cursor: default;
+  width: 50px;
+  height: 50px;
+}
+
+/* PROJECTS SECTION */
+
+#projects {
+  position: relative;
+}
+.project-containers {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.project-img,
+.blog-img {
+  border-radius: 2rem;
+  width: 90%;
+  height: 90%;
+}
+
+.project-title {
+  margin: 1rem;
+  color: black;
+}
+
+.project-btn {
+  color: black;
+  border-color: rgb(163, 163, 163);
+  margin-bottom: 2rem;
+}
+
+/* BUTTONS */
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.btn {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 8rem;
+  border-radius: 2rem;
+}
+
+.btn-color-1,
+.btn-color-2 {
+  border: rgb(53, 53, 53) 0.1rem solid;
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
+  cursor: pointer;
+}
+
+.btn-color-1,
+.btn-color-2:hover {
+  background: rgb(53, 53, 53);
+  color: white;
+}
+
+.btn-color-1:hover {
+  background: rgb(0, 0, 0);
+}
+
+.btn-color-2 {
+  background: none;
+}
+
+.btn-color-2:hover {
+  border: rgb(255, 255, 255) 0.1rem solid;
+}
+
+.btn-container {
+  gap: 1rem;
+}
+.details-container {
+  padding: 1.5rem;
+  flex: 1;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
+}
+
+.about-containers {
+  gap: 1rem;
+}
+.about-containers,
+.about-details-container {
+  display: flex;
+}
+
+/* blog */
+#blog {
+  position: relative;
+}
+.container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.card {
+  margin: 10px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  width: 320px;
+}
+
+.card-header img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 20px;
+  min-height: 250px;
+}
+
+.tag {
+  background: #cccccc;
+  border-radius: 50px;
+  font-size: 12px;
+  margin: 0;
+  color: #fff;
+  padding: 2px 10px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.tag-teal {
+  background-color: #47bcd4;
+}
+.tag-purple {
+  background-color: #5e76bf;
+}
+.tag-pink {
+  background-color: #cd5b9f;
+}
+
+.card-body p {
+  font-size: 13px;
+  margin: 0 0 40px;
+}
+.user {
+  display: flex;
+  margin-top: auto;
+}
+
+.user img {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+.user-info h5 {
+  margin: 0;
+}
+.user-info small {
+  color: #545d7a;
+}
+.card-info-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+.like-comment {
+  height: fit-content;
+  width: 6rem;
+}
+.like-comment img {
+  width: 15px;
+  margin-right: 0.2rem;
+}
+.like-comment span {
+  margin: 0 1rem 0 0;
+}
+
+.more-blogs-links {
+  margin-top: 1rem;
+  border: 1px solid #000;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.more-blogs-links a {
+  font-size: 1.3rem;
+  text-align: center;
+}
