--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,17 @@
 /* GENERAL */
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+:root {
+  --title-color: #000;
+  --text-color: #555555;
+  --link-color: #007acc;
+  --border: 1px solid #000;
+  --border-radius: 10px;
+  --background-color: #000;
+  --second-background-color: #fff;
+  --border-color: #555555;
+  --btn-font-size: 1rem;
+}
 
 * {
   margin: 0;
@@ -16,7 +27,82 @@ html {
 }
 
 p {
-  color: rgb(85, 85, 85);
+  color: var(--text-color);
+}
+
+/* GENERAL */
+.flex-center {
+  display: flex;
+  justify-content: center;
+}
+.flex-space-around {
+  display: flex;
+  justify-content: space-around;
+}
+.flex-space-between {
+  display: flex;
+  justify-content: space-between;
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+.gap-2 {
+  gap: 2rem;
+}
+.gap-5 {
+  gap: 5rem;
+}
+/* BUTTONS */
+
+.btn-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 2rem;
+  gap: 1rem;
+}
+
+.btn {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 0.5rem;
+  width: 8rem;
+  border-radius: 2rem;
+}
+
+.btn-color-1,
+.btn-color-2 {
+  border: rgb(53, 53, 53) 0.1rem solid;
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
+  cursor: pointer;
+}
+
+.btn-color-1,
+.btn-color-2:hover {
+  background: rgb(53, 53, 53);
+  color: white;
+}
+
+.btn-color-1:hover {
+  background: rgb(0, 0, 0);
+}
+
+.btn-color-2 {
+  background: none;
+}
+
+.btn-color-2:hover {
+  border: rgb(255, 255, 255) 0.1rem solid;
+}
+
+.btn-container {
+  gap: 1rem;
 }
 
 /* TRANSITION */
@@ -29,8 +115,8 @@ a,
 /* Cards */
 .card {
   margin: 10px;
-  background-color: #fff;
-  border-radius: 10px;
+  background-color: var(--second-background-color);
+  border-radius: var(--border-radius);
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   width: 378px;
@@ -42,9 +128,6 @@ a,
   object-fit: cover;
 }
 .card-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: flex-start;
   padding: 20px;
   min-height: 250px;
@@ -190,8 +273,6 @@ section {
 
 /* profile section*/
 #profile {
-  display: flex;
-  justify-content: space-between;
   gap: 5rem;
   height: 80vh;
 }
@@ -211,8 +292,6 @@ section {
 .title {
   font-size: 3rem;
   margin-bottom: 3rem;
-  display: flex;
-  flex-direction: column;
 }
 .section__pic-container {
   margin-bottom: 2rem;
@@ -222,9 +301,6 @@ section {
 }
 
 .profile-social-media {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
   align-items: center;
   height: 25rem;
 }
@@ -234,8 +310,6 @@ section {
 }
 .experiance-text-container {
   margin-top: 2rem;
-  display: flex;
-  justify-content: space-between;
   gap: 2rem;
 }
 .text-experiance h1 {
@@ -254,10 +328,7 @@ section {
   font-size: 3rem;
 }
 .section__container-text {
-  display: flex;
-  justify-content: center;
   gap: 5rem;
-  flex-wrap: wrap;
 }
 .about-description {
   width: 50%;
@@ -265,16 +336,13 @@ section {
 }
 .section__about-container {
   width: 40%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   gap: 0.5rem;
 }
 .section__about-projects {
   height: fit-content;
   width: 100%;
-  border: 1px solid black;
-  border-radius: 10px;
+  border: var(--border);
+  border-radius: var(--border-radius);
   padding: 1rem 0.5rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
@@ -283,7 +351,7 @@ section {
   color: #000;
 }
 .about-link {
-  color: #007acc;
+  color: var(--link-color);
   text-decoration: underline;
   font-size: 0.9rem;
 }
@@ -295,12 +363,6 @@ section {
 #experience {
   position: relative;
 }
-.about-containers,
-.about-details-container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
 .experience-sub-title {
   color: rgb(85, 85, 85);
   font-weight: 600;
@@ -308,25 +370,12 @@ section {
   margin-bottom: 2rem;
 }
 
-.experience-details-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
 .article-container {
-  display: flex;
   text-align: initial;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 2.5rem;
-  justify-content: space-around;
 }
 
 article {
-  display: flex;
   width: 10rem;
-  justify-content: space-around;
   gap: 0.5rem;
 }
 
@@ -341,22 +390,16 @@ article .icon {
 #projects {
   position: relative;
 }
-.project-containers {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
 .project-img,
 .blog-img {
-  border-radius: 2rem;
+  border-radius: var(--border-radius);
   width: 90%;
   height: 90%;
 }
 
 .project-title {
   margin: 1rem;
-  color: black;
+  color: var(--title-color);
 }
 
 .project-btn {
@@ -365,54 +408,6 @@ article .icon {
   margin-bottom: 2rem;
 }
 
-/* BUTTONS */
-
-.btn-container {
-  display: flex;
-  justify-content: space-between;
-  padding: 0 2rem;
-  gap: 1rem;
-}
-
-.btn {
-  font-weight: 600;
-  transition: all 300ms ease;
-  padding: 1rem;
-  width: 8rem;
-  border-radius: 2rem;
-}
-
-.btn-color-1,
-.btn-color-2 {
-  border: rgb(53, 53, 53) 0.1rem solid;
-}
-
-.btn-color-1:hover,
-.btn-color-2:hover {
-  cursor: pointer;
-}
-
-.btn-color-1,
-.btn-color-2:hover {
-  background: rgb(53, 53, 53);
-  color: white;
-}
-
-.btn-color-1:hover {
-  background: rgb(0, 0, 0);
-}
-
-.btn-color-2 {
-  background: none;
-}
-
-.btn-color-2:hover {
-  border: rgb(255, 255, 255) 0.1rem solid;
-}
-
-.btn-container {
-  gap: 1rem;
-}
 .details-container {
   padding: 1.5rem;
   flex: 1;
@@ -423,23 +418,12 @@ article .icon {
   text-align: center;
 }
 
-.about-containers {
-  gap: 1rem;
-}
-.about-containers,
-.about-details-container {
-  display: flex;
-}
-
 /* blog */
 #blog {
   position: relative;
 }
 .container {
-  display: flex;
   width: 100%;
-  justify-content: center;
-  flex-wrap: wrap;
 }
 
 .tag {
@@ -484,8 +468,6 @@ article .icon {
   color: #545d7a;
 }
 .card-info-section {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
   gap: 2rem;
   width: 100%;
@@ -504,31 +486,22 @@ article .icon {
 
 .more-blogs-links {
   margin-top: 1rem;
-  display: flex;
-  justify-content: center;
   align-items: center;
 }
 .more-blogs-links a {
   font-size: 1rem;
   text-align: center;
 }
-
-/* contact */
-.contact-container,
-.footer-container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+.blog-link-detail:hover {
+  text-decoration: none;
 }
+/* contact */
 .contact-social-media,
 .footer-link-container {
   border: 2px solid black;
   border-radius: 10px;
   width: 20rem;
-  display: flex;
-  justify-content: space-around;
   align-items: center;
-  flex-direction: column;
 }
 
 .contact-social-media-items,
@@ -544,14 +517,14 @@ article .icon {
 .contact-form,
 .footer-form {
   width: 60%;
-  border: 2px solid black;
-  border-radius: 10px;
+  border: var(--border);
+  border-radius: var(--border-radius);
   padding: 2rem 1rem;
 }
 .comment-title-text {
   text-align: center;
   font-size: 1.5rem;
-  color: #555555;
+  color: var(--text-color);
   padding-bottom: 2rem;
 }
 .form-label {
@@ -565,7 +538,7 @@ article .icon {
   display: block;
   margin: 0 auto;
   border: 2px solid black;
-  border-radius: 10px;
+  border-radius: var(--border-radius);
   margin-bottom: 2rem;
   width: 80%;
 }
@@ -576,9 +549,9 @@ article .icon {
   align-items: center;
   justify-content: right;
 }
-.btn-submit {
-  border: 2px solid black;
-  border-radius: 10px;
+.comment-btn-submit {
+  border: var(--border-color);
+  border-radius: var(--border-radius);
   width: 6rem;
   font-size: 1rem;
   padding: 0.3rem 0;
@@ -652,8 +625,6 @@ footer {
 }
 .blog-links {
   padding: 2rem 0;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 .blog-links span a {
@@ -677,9 +648,6 @@ footer {
   justify-content: right;
 }
 .single__blog-comment-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
   margin-left: 1rem;
 }
@@ -776,7 +744,7 @@ form .txt_field {
 .pass:hover {
   text-decoration: underline;
 }
-input[type="submit"] {
+.login-sub-btn {
   width: 100%;
   height: 50px;
   border: 1px solid;
@@ -788,7 +756,7 @@ input[type="submit"] {
   cursor: pointer;
   outline: none;
 }
-input[type="submit"]:hover {
+.login-sub-btn:hover {
   border-color: #2691d9;
   transition: 0.5s;
 }
