--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,11 @@ nav {
   justify-content: space-around;
   align-items: center;
   height: 17vh;
-  position: sticky;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #ffffff;
+  z-index: 1000;
 }
 
 .nav-links {
@@ -284,6 +288,7 @@ section {
 #profile {
   gap: 5rem;
   height: 80vh;
+  padding-top: 10rem;
 }
 .section__text {
   align-self: top;
@@ -1022,14 +1027,15 @@ body {
   position: relative;
   width: 100%;
   padding: 20px;
-  display: grid;
-  grid-template-columns: 2fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   grid-gap: 30px;
-  /* margin-top: 10px; */
 }
 #dashboard,
 #blogs,
-#messages {
+#messages,
+#projects {
   display: none;
 }
 
@@ -1426,4 +1432,75 @@ body {
 }
 .msgActions .delete-action {
   color: red;
+}
+
+/* ===== profile popup == */
+
+.sub-menu-wrap {
+  position: absolute;
+  top: 6%;
+  right: 0;
+  width: 320px;
+  z-index: 1000;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s;
+}
+.sub-menu-wrap.open-menu {
+  max-height: 400px;
+}
+
+.sub-menu {
+  background-color: var(--black2);
+  padding: 20px;
+  margin: 10px;
+}
+.profile-user-info {
+  display: flex;
+}
+.profile-user-info h3 {
+  font-weight: 500;
+}
+.profile-user-info img {
+  width: 60px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+.sub-menu hr {
+  border: 0;
+  height: 1px;
+  width: 100%;
+  background-color: var(--white);
+  margin: 15px 0 10px;
+}
+.sub-menu-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #525252;
+  margin: 12px 0;
+}
+.sub-menu-link p {
+  width: 100%;
+}
+.sub-menu-link ion-icon {
+  width: 40px;
+  background-color: #e5e5e5;
+  border-radius: 50%;
+  padding: 8px;
+  margin-right: 15px;
+}
+.sub-menu-link span {
+  font-size: 22px;
+  transition: transform 0.5s;
+}
+.sub-menu-link:hover span {
+  transform: translateX(5px);
+}
+.sub-menu-link:hover p {
+  font-weight: 600px;
+  color: #000;
+}
+.sub-menu-link:hover {
+  text-decoration: none;
 }
