--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -78,8 +78,12 @@
     width: 84%;
     overflow: hidden;
   }
-  .details {
-    grid-template-columns: 1fr; /* Set grid to one column */
+  .recentMessages,
+  .recentBlogs {
+    width: 85%;
+  }
+  .sub-menu-wrap {
+    top: 5%;
   }
 }
 @media (max-width: 991px) {
@@ -106,6 +110,9 @@
   }
   table tr td:first-child {
     display: none;
+  }
+  .sub-menu-wrap {
+    top: 3%;
   }
 }
 
@@ -195,5 +202,8 @@
     position: fixed;
     right: 0;
     left: initial;
+  }
+  .sub-menu-wrap {
+    top: 3%;
   }
 }
