--- a/styles.css
+++ b/styles.css
@@ -793,6 +793,9 @@ form .txt_field {
 .signup_link a:hover {
   text-decoration: underline;
 }
+.error {
+  color: red;
+}
 
 /* Blogs-list page */
 .search-box {
