--- a/styles.css
+++ b/styles.css
@@ -589,6 +589,14 @@ article .icon {
   padding: 0.3rem 0;
   font-weight: bold;
 }
+#contactError {
+  display: none;
+  color: var(--white);
+  background-color: #8ffab1;
+  padding: 0.7rem 0;
+  text-align: center;
+  font-weight: 600;
+}
 
 /* FOOTER */
 footer {
@@ -1415,6 +1423,14 @@ body {
 }
 .listBlogs .cardHeader {
   margin-bottom: 1rem;
+}
+#addBlogError {
+  display: none;
+  color: var(--white);
+  background-color: #8ffab1;
+  padding: 0.7rem 0;
+  text-align: center;
+  font-weight: 600;
 }
 
 /* =============== Messages section=========== */
