--- a/styles.css
+++ b/styles.css
@@ -724,6 +724,44 @@ footer {
 .number {
   font-size: 1rem;
 }
+.detail-fullname {
+  font-size: 1rem;
+  color: #000;
+  font-weight: bold;
+  margin-top: 1rem;
+}
+.detail-comment {
+  font-size: 0.8rem;
+  color: #000;
+}
+#comment-form {
+  width: 100%;
+  border: 1px solid #000;
+  border-radius: 10px;
+  padding: 2rem;
+  margin-top: 1rem;
+}
+#fullname {
+  display: block;
+  width: 50%;
+  font-size: 1rem;
+  border: none;
+  border-bottom: 2px solid #000;
+  margin: 0 auto 2rem;
+}
+#fullname:focus {
+  outline: none;
+}
+#comment {
+  display: block;
+  width: 50%;
+  height: 15vh;
+  margin: 0 auto 2rem;
+}
+#singleBtnSend {
+  display: block;
+  margin-right: auto;
+}
 
 /* login section */
 #login-body {
