--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -290,6 +290,7 @@ section {
   gap: 5rem;
   height: 80vh;
   padding-top: 10rem;
+  position: relative;
 }
 .section__text {
   align-self: top;
@@ -777,4 +778,7 @@ form .txt_field {
 }
 .search-icon {
   width: 30px;
+}
+.ql-tooltip {
+  display: none !important;
 }
