--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -417,7 +417,8 @@ body {
 .listBlogs table {
   width: 100%;
 }
-.addBlog {
+.addBlog,
+.updateBlog {
   width: 100%;
   position: relative;
   display: none;
